sfdx-source/force-app/main/default/objects/Figment_Heroku_Integration_Errors__x/Figment_Heroku_Integration_Errors__x.object-meta.xml
<CustomObject>
    <description>LEM-3523: This external object stores error record details from error_record_details table
    in Figment Postgres database.</description>
    <externalDataSource>Figment_Data_Connector</externalDataSource>
    <externalName>public$error_record_details</externalName>
    <label>Figment Heroku Integration Error</label>
    <pluralLabel>Figment Heroku Integration Errors</pluralLabel>

</CustomObject>