sfdx-source/force-app/main/default/objects/Figment_Heroku_Integration_Errors__x/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>LEM-3523: This field is used to store the created date for record from error_record_details table in Figment Postgres database.</description>
    <externalDeveloperName>created_at</externalDeveloperName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>