sfdx-source/force-app/main/default/objects/Figment_Heroku_Integration_Errors__x/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>LEM-3523: This field is used to store the error message details from error_record_details table in Figment Postgres database.</description>
    <externalDeveloperName>error_details</externalDeveloperName>
    <label>Error_Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>