sfdx-source/force-app/main/default/objects/Figment_Heroku_Integration_Errors__x/fields/Figment_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Figment_Record_Id__c</fullName>
    <description>LEM-3523: This field is used to store the Figment sfid from error_record_details table in Figment Postgres database.</description>
    <label>Figment Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>