sfdx-source/force-app/main/default/objects/Figment_Heroku_Integration_Errors__x/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>LEM-3523: This field is used to store the Postgres Id from error_record_details
    table in Figment Postgres database.</description>
    <externalDeveloperName>id</externalDeveloperName>
    <label>Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>