sfdx-source/force-app/main/default/objects/Figment_Heroku_Integration_Errors__x/fields/Lemonade_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Lemonade_Record_Id__c</fullName>
    <description>LEM-3523: This field is used to store the Lemonade sfid from error_record_details table in Figment Postgres database.</description>
    <externalDeveloperName>lemonade_record_id</externalDeveloperName>
    <label>Lemonade Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>