sfdx-source/force-app/main/default/objects/Figment_Heroku_Integration_Errors__x/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>LEM-3523: This field is used to store the Object name from error_record_details table in Figment Postgres database.</description>
    <externalDeveloperName>table_name</externalDeveloperName>
    <label>Object</label>
    <type>TextArea</type>
</CustomField>