sfdx-source/force-app/main/default/objects/Figment_Heroku_Integration_Errors__x/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <description>LEM-3523: This field is used to store the processed date for record from error_record_details table in Figment Postgres database.</description>
    <externalDeveloperName>processed_at</externalDeveloperName>
    <label>Processed Date</label>
    <type>DateTime</type>
</CustomField>