sfdx-source/force-app/main/default/objects/Figment_Heroku_Integration_Errors__x/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>LEM-3523: This field is used to store the source of for record from error_record_details table in Figment Postgres database.</description>
    <externalDeveloperName>source</externalDeveloperName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>