sfdx-source/force-app/main/default/objects/Figment_Heroku_Integration_Errors__x/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>LEM-3523: This field is used to store the state for record from error_record_details table in Figment Postgres database.</description>
    <externalDeveloperName>state</externalDeveloperName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>